examples/mood/tests/evaluate/construct_struct_wrong_field_type.mood.expected
-----------------
INPUT
----------------- 
struct Foo {
  a: i32,
  b: i32
}

pub fn test(): i32 {
    Foo { a: 1_i32, b: 1_f64 };
    0_i32
}
-----------------
OUTPUT
-----------------
Error: Expected "i32", got "f64":
 --> construct_struct_wrong_field_type.mood:7:24

  | pub fn test(): i32 {
7 |     Foo { a: 1_i32, b: 1_f64 };
  |                        ^^^^^ Expected "i32".
  |     0_i32
