examples/mood/tests/evaluate/construct_struct_wrong_field_type.mood
struct Foo {
  a: i32,
  b: i32
}

pub fn test(): i32 {
    Foo { a: 1_i32, b: 1_f64 };
    0_i32
}